<resources>
    <string name="app_name">SMP Referrals</string>
    <string name="click_here_to_log_in_user">Click Here To Log In User</string>
    <string name="referral_id">ID</string>
    <string name="status">Status</string>
    <string name="pending_at">Pending At</string>
    <string name="referee">Referee</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="origin">Origin</string>
    <string name="source">Source</string>
    <string name="client_data">Client Data</string>
</resources>
