<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:padding="5dp">

        <TextView
            android:id="@+id/referral_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/referral_id"/>

        <TextView
            android:id="@+id/referral_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"/>

        <TextView
            android:id="@+id/referral_pending_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending_at"/>

        <TextView
            android:id="@+id/referral_referee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/referee"/>

        <TextView
            android:id="@+id/referral_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <TextView
            android:id="@+id/referral_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"/>


        <TextView
            android:id="@+id/referral_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin"/>

        <TextView
            android:id="@+id/referral_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"/>

        <TextView
            android:id="@+id/referral_client_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_data"/>

    </LinearLayout>
</android.support.v7.widget.CardView>
